--- a/SeminarOne(Error).ipynb
+++ b/SeminarOne(Error).ipynb
@@ -238,9 +238,9 @@
    "source": [
     "### Оценка ошибки округления для конечных разностей\n",
     "\n",
-    "Пусть $ | f( \\xi ) | \\leq M_0 $. Тогда модуль $ \\varepsilon_{окр} $ можно оценить седующим выражением:\n",
+    "Пусть $ | f( \\xi ) | \\leq M_0 $. Тогда модуль $ \\varepsilon_{round} $ можно оценить седующим выражением:\n",
     "\n",
-    "$$ | \\varepsilon_{окр} | \\leq | \\frac{ M_0 \\varepsilon_{mash} + M_0 \\varepsilon_{mash} }{ h } | = \\frac{ 2 M_0 \\varepsilon_{mash} }{ h }$$"
+    "$$ | \\varepsilon_{round} | \\leq | \\frac{ M_0 \\varepsilon_{mash} + M_0 \\varepsilon_{mash} }{ h } | = \\frac{ 2 M_0 \\varepsilon_{mash} }{ h }$$"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "\n",
     "Полная ошибка ($ \\varepsilon_f $) является суммой ошибок метода и окрегления и описывется выражением:\n",
     "\n",
-    "$$ \\varepsilon_f = \\varepsilon_{окр} + \\varepsilon_{method} = \\frac{ M_2 h }{ 2 } + \\frac{ 2 M_0 \\varepsilon_{mash} }{ h } $$\n",
+    "$$ \\varepsilon_f = \\varepsilon_{round} + \\varepsilon_{method} = \\frac{ M_2 h }{ 2 } + \\frac{ 2 M_0 \\varepsilon_{mash} }{ h } $$\n",
     "\n",
     "#### Пример\n",
     "\n",
@@ -261,7 +261,7 @@
     "\n",
     "Расчитаем вторую производную: $ f''( x ) = x^2 e^x $. Так как $ f''( x_0 ) = e $, поэтому  возьмем $ M_2 = 3 $.\n",
     "\n",
-    "Тогда $ \\varepsilon_{окр} = 1,5 h;\\ \\varepsilon_{method} = ( 6 \\varepsilon_{mash} ) / h;\\ \\varepsilon_f = 1,5 h + ( 6 \\varepsilon_{mash} ) / h $"
+    "Тогда $ \\varepsilon_{окр} = 1,5 h;\\ \\varepsilon_{method} = ( 6 \\varepsilon_{mash} ) / h;\\ \\varepsilon_f = 1,5 h + ( 6 \\varepsilon_{mash} ) / h $, при этом возьмем $ \\varepsilon_{mash} = 1.0 $"
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
