--- a/SeminarOne(Error).ipynb
+++ b/SeminarOne(Error).ipynb
@@ -261,7 +261,7 @@
     "\n",
     "Расчитаем вторую производную: $ f''( x ) = x^2 e^x $. Так как $ f''( x_0 ) = e $, поэтому  возьмем $ M_2 = 3 $.\n",
     "\n",
-    "Тогда $ \\varepsilon_{окр} = 1,5 h;\\ \\varepsilon_{method} = ( 6 \\varepsilon_{mash} ) / h;\\ \\varepsilon_f = 1,5 h + ( 6 \\varepsilon_{mash} ) / h $, при этом возьмем $ \\varepsilon_{mash} = 1.0 $"
+    "Тогда $ \\varepsilon_{окр} = 1,5 h;\\ \\varepsilon_{method} = ( 6 \\varepsilon_{mash} ) / h;\\ \\varepsilon_f = 1,5 h + ( 6 \\varepsilon_{mash} ) / h $, при этом возьмем $ \\varepsilon_{mash} = 10^{-8} $"
    ]
   },
   {
@@ -365,10 +365,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def h_opt( M0, M2 ):\n",
+    "    \n",
+    "    global epsmash\n",
+    "    \n",
+    "    return 2 * np.sqrt( M0 * epsmash / M2 )\n",
+    "\n",
+    "def EpsMin( M0, M2 ):\n",
+    "    \n",
+    "    global epsmash\n",
+    "    \n",
+    "    return 2.0 * np.sqrt( M0 * M2 * epsmash )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N = 100\n",
+    "\n",
+    "step = 1.0e-5\n",
+    "\n",
+    "epsmash = 1.0e-8\n",
+    "\n",
+    "M0 = M2 = 3.0\n",
+    "\n",
+    "Ef = np.zeros( N - 1 )\n",
+    "\n",
+    "Emethod = np.zeros( N - 1 )\n",
+    "\n",
+    "Eround = np.zeros( N - 1 )\n",
+    "\n",
+    "H = np.arange( 1, N, 1 ) * step\n",
+    "\n",
+    "for i in np.arange( 0, N - 1, 1 ):\n",
+    "    \n",
+    "    Ef[ i ] = EpsFun( H[ i ] )\n",
+    "    \n",
+    "    Emethod[ i ] = EpsMethod( H[ i ], epsmash )\n",
+    "    \n",
+    "    Eround[ i ] = EpsRound( H[ i ] )\n",
+    "\n",
+    "plt.figure( figsize = ( 18, 10 ) )\n",
+    "plt.plot( H, Emethod, 'k.', ms = 16 )\n",
+    "plt.plot( H, Eround, 'r.', ms = 16 )\n",
+    "plt.plot( H, Ef, 'g-', lw = 3 )\n",
+    "plt.plot( [ h_opt( M0, M2 ), ], [ EpsMin( M0, M2 ), ], 'b.', ms = 20 )\n",
+    "plt.rc('font', **{'size' : 22})\n",
+    "plt.xlabel( '$h$' )\n",
+    "plt.ylabel( '$\\\\varepsilon$' )\n",
+    "plt.legend( [ '$\\\\varepsilon_{method}$', '$\\\\varepsilon_{round}$', '$\\\\varepsilon_{f}$' ] )\n",
+    "plt.title( 'Error for $e^{1}$' )\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
