--- a/Seminar(Three).ipynb
+++ b/Seminar(Three).ipynb
@@ -324,9 +324,9 @@
     "\n",
     "Так как точное решение $x^*$ неизвестно, то это условие на практике в\n",
     "явном виде проверить невозможно. Здесь поступают следующим образом.\n",
-    "Введем величину $$||x^{(n)} - x^{(n-1)}||$$, которая называется ${\\bf итерационной\\ поправкой}$. Иногда требуют просто, чтобы итерационная поправка не превосходила заданного значения точности: $$||x^{(n)} - x^{(n-1)}||< \\varepsilon $$\n",
+    "Введем величину $$||x^{(n)} - x^{(n-1)}||$$, которая называется итерационной поправкой. Иногда требуют просто, чтобы итерационная поправка не превосходила заданного значения точности: $$||x^{(n)} - x^{(n-1)}||< \\varepsilon $$\n",
     "\n",
-    "$$||x* - x^{(n)}|| = ||x^{\\infty} - x^{(n)}|| = ||x^{(n)} - x^{(n+1)} + x^{(n+1)} - x^{(n+2)} + x^{(n+2)}-...-x^{\\infty}|| \\leq ||x^{(n)} - x^{(n+1)}||+||x^{(n+1)} - x^{(n+2)}||+||x^{(n+2)} - x^{(n+3)}||+...\\leq ||x^{(n)} - x^{(n+1)}||(1+q+q^2+...)=||x^{(n)} - x^{(n+1)}|| \\frac{1}{1-q} \\leq \\varepsilon$$\n",
+    "$$||x* - x^{(n)}|| = ||x^{\\infty} - x^{(n)}|| = ||x^{(n)} - x^{(n+1)} + x^{(n+1)} - x^{(n+2)} + x^{(n+2)}-...-x^{\\infty}|| \\leq$$ $$ \\leq ||x^{(n)} - x^{(n+1)}||+||x^{(n+1)} - x^{(n+2)}||+||x^{(n+2)} - x^{(n+3)}||+...\\leq ||x^{(n)} - x^{(n+1)}||(1+q+q^2+...)=$$ $$=||x^{(n)} - x^{(n+1)}|| \\frac{1}{1-q} \\leq \\varepsilon$$\n",
     "\n",
     "Таким образом, мы видим, что для достижения заданной точности крите-\n",
     "рий в терминах итерационной поправки нужно переформулировать\n",
