--- a/Seminar(Three).ipynb
+++ b/Seminar(Three).ipynb
@@ -588,6 +588,17 @@
     "\n",
     "Для решения данной системы воспользуемся методом Ньютона\n",
     "\n",
+    "$$\\vec{u} = \\begin{pmatrix}\n",
+    "x \\\\\n",
+    "y\n",
+    "\\end{pmatrix}$$\n",
+    "\n",
+    "Функция $\\vec{F}(\\vec{u})$ выглядит следующим образом: $$ \\vec{F}(\\vec{u}) = \\begin{pmatrix}\n",
+    "xy - x^2 - 1.03 \\\\\n",
+    "-2x^3 + y^2 - 1.98\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
     "Матрица Якоби для данной системы:\n",
     "\n",
     "$$ J = \\frac{d\\vec{F}}{d\\vec{u}} = \\begin{pmatrix}\n",
