--- a/MNK.ipynb
+++ b/MNK.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "На семинаре были следующие формулы для $\\beta_0\\ \\beta_1$\n",
     "\n",
-    "$$  $$"
+    "$$ \\beta_0 = \\frac{\\sum{y_i} \\sum{x_i^2} - \\sum{x_iy_i} \\sum{x_i}}{(n+1)\\sum{x_i^2} - \\left(\\sum{x_i}\\right)^2},\\ \\beta_1 = \\frac{(n+1)\\sum{x_iy_i} - \\sum{y_i}\\sum{x_i}}{(n+1)\\sum{x_i^2} - \\left(\\sum{x_i}\\right)^2} $$"
    ]
   },
   {
