--- a/Integrirovanie.ipynb
+++ b/Integrirovanie.ipynb
@@ -45,7 +45,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задача\n",
+    "## Задача"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "Найти значение интеграла $$ \\int^{10}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } $$"
    ]
@@ -55,7 +62,13 @@
    "metadata": {},
    "source": [
     "### Первый способ\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ \\int^{10}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = 2\\sqrt{10}\\cos{10} +2 \\int^{10}_{0}{ \\sin{x}\\sqrt{x}dx } $$"
    ]
   },
@@ -124,8 +137,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Второй способ\n",
-    "\n",
+    "### Второй способ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ \\int^{10}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = \\left|  x = t^2 \\right| = \\int^{\\sqrt{10}}_{0}{ \\frac{\\cos{t^2}}{t}2tdt } = 2\\int^{\\sqrt{10}}_{0}{ \\cos{t^2}dt} = $$"
    ]
   },
@@ -188,12 +206,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Третий способ\n",
+    "## Третий способ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "$$ \\int^{10}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = \\int^{c}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } + \\int^{10}_{c}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = \\int^{c}_{0}{ \\frac{1}{\\sqrt{x}}dx + \\frac{x^{7/2}}{24}dx +... } + \\int^{10}_{c}{ \\frac{\\cos{x}}{\\sqrt{x}}dx }$$\n",
     "\n",
-    "$$ \\int^{c}_{0}{ \\frac{1}{\\sqrt{x}}dx } \\leq \\frac{||\\left(\\frac{1}{x} \\right)^{(2)}||}{12}(b-a)h^2 \\approx \\frac{c^{-5/2}}{16}ch^2 \\approx \\frac{c^{-3/2}}{16}h^2 \\approx 1.0e-5$$\n",
-    "\n",
+    "$$ \\int^{10}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = \\int^{c}_{0}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } + \\int^{10}_{c}{ \\frac{\\cos{x}}{\\sqrt{x}}dx } = \\int^{c}_{0}{ \\frac{1}{\\sqrt{x}}dx + \\frac{x^{7/2}}{24}dx +... } + \\int^{10}_{c}{ \\frac{\\cos{x}}{\\sqrt{x}}dx }$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\int^{c}_{0}{ \\frac{1}{\\sqrt{x}}dx } \\leq \\frac{||\\left(\\frac{1}{x} \\right)^{(2)}||}{12}(b-a)h^2 \\approx \\frac{c^{-5/2}}{16}ch^2 \\approx \\frac{c^{-3/2}}{16}h^2 \\approx 1.0e-5$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$c \\approx \\left( \\frac{16 \\times 10^{-5}}{h^2} \\right)^{-2/3}$$"
    ]
   },
