--- a/Giperbolic.ipynb
+++ b/Giperbolic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08cb045a",
+   "id": "0f2c67fb",
    "metadata": {},
    "source": [
     "## Задача XIV.10.2"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71bda3aa",
+   "id": "2653c300",
    "metadata": {},
    "source": [
     "Сама задача для решения осбой сложностью не обладает. Только в процессе решения необходимо следить за выполнением условия переодических граничных условий. Данные места пометил в коде, можете ознакомиться.\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5914c243",
+   "id": "86bee9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b9403bf1",
+   "id": "cb421967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +107,13 @@
     "\n",
     "    while t < TStop:\n",
     "\n",
-    "        y[ 0 ] = Shm( sigma, y_old[ 1 ], y_old[ 0 ], y_old[ -1 ] )\n",
+    "        y[ 0 ] = Shm( sigma, y_old[ 1 ], y_old[ 0 ], y_old[ -1 ] ) # учитываем граничные условия\n",
     "\n",
     "        for i in np.arange( 1, N - 1, 1 ):\n",
     "\n",
     "            y[ i ] = Shm( sigma, y_old[ i + 1 ], y_old[ i ], y_old[ i - 1 ] )\n",
     "\n",
-    "        y[ -1 ] = Shm( sigma, y[ 0 ], y_old[ -1 ], y_old[ -2 ] )\n",
+    "        y[ -1 ] = Shm( sigma, y[ 0 ], y_old[ -1 ], y_old[ -2 ] ) # учитываем граничные условия\n",
     "\n",
     "        y_old = np.copy( y )\n",
     "\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6695cbe1",
+   "id": "b2f660ee",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d60e469",
+   "id": "41dab552",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8c141f",
+   "id": "15515b2e",
    "metadata": {},
    "outputs": [],
    "source": []
